--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -15,12 +15,13 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mssql": "^6.2.3",
+    "mssql": "^6.4.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
     "request": "^2.88.2",
     "require": "^2.4.20",
     "sequelize": "^6.3.5",
-    "sequelizer": "^1.1.4"
+    "sequelizer": "^1.1.4",
+    "tedious": "^14.0.0"
   }
 }
